SUBDIRS = eventmanager \
		  commandsystem \
          entity \
          filetypes \
          fonts \
          image \
          mapdoom3 \
          md5model \
          model \
          particles \
          scenegraph \
          shaders \
          skins

# Conditional modules
SUBDIRS += @sound_module@ @script_module@

# Optional plugins
SUBDIRS += @sr_plugin@ \
           @obj_plugin@ \
           @difficulty_plugin@ \
           @conv_plugin@ \
           @gui_plugin@ \
           @editing_plugin@
