SUBDIRS = eventmanager \
		  commandsystem \
          filetypes \
          fonts \
          image \
          mapdoom3 \
          md5model \
          particles \
          scenegraph \
          shaders

# Conditional modules
SUBDIRS += @sound_module@ @script_module@

# Optional plugins
SUBDIRS += @sr_plugin@ \
           @obj_plugin@ \
           @difficulty_plugin@ \
           @conv_plugin@ \
           @gui_plugin@ \
           @editing_plugin@
