libsdir = $(top_srcdir)/libs
AM_CPPFLAGS = -DPKGLIBDIR='"$(pkglibdir)"' \
              -DPKGDATADIR='"$(pkgdatadir)"' \
              -DLOCALEDIR='"$(localedir)"' \
              -I$(top_srcdir)/include \
              -I$(libsdir) \
              $(GTKMM_CFLAGS) \
              $(GTKGLEXTMM_CFLAGS) \
              $(XML_CFLAGS) \
              $(GTKSOURCEVIEWMM_CFLAGS) \
              $(FTGL_CFLAGS)

bin_PROGRAMS = darkradiant
darkradiant_CPPFLAGS = $(AM_CPPFLAGS) 
darkradiant_LDFLAGS = $(GTKMM_LIBS) \
                      $(GTKGLEXTMM_LIBS) \
                      $(GTKSOURCEVIEWMM_LIBS) \
                      $(XML_LIBS) \
                      $(GLEW_LIBS) \
                      $(GL_LIBS) \
                      $(FTGL_LIBS) \
                      $(BOOST_FILESYSTEM_LIBS) \
                      $(BOOST_SYSTEM_LIBS) \
                      $(BOOST_REGEX_LIBS) \
                      $(DL_LIBS)
darkradiant_LDADD = $(top_builddir)/libs/scene/libscenegraph.la \
                    $(top_builddir)/libs/gtkutil/libgtkutil.la \
                    $(top_builddir)/libs/xmlutil/libxmlutil.la \
                    $(top_builddir)/libs/math/libmath.la
darkradiant_SOURCES = main.cpp \
                      Profile.cpp \
                      RadiantModule.cpp \
                      RadiantThreadManager.cpp \
                      brush/Winding.cpp \
                      brush/export/CollisionModel.cpp \
                      brush/FaceTexDef.cpp \
                      brush/BrushModule.cpp \
                      brush/FixedWinding.cpp \
                      brush/BrushNode.cpp \
                      brush/FaceInstance.cpp \
                      brush/Brush.cpp \
                      brush/TextureProjection.cpp \
                      brush/Face.cpp \
                      brush/TexDef.cpp \
                      brush/BrushPrimitTexDef.cpp \
                      brush/FaceShader.cpp \
                      brush/csg/BrushByPlaneClipper.cpp \
                      brush/csg/CSG.cpp \
                      brush/FacePlane.cpp \
                      camera/Camera.cpp \
                      camera/GlobalCamera.cpp \
                      camera/CameraSettings.cpp \
                      camera/CamRenderer.cpp \
                      camera/CamWnd.cpp \
                      camera/FloatingCamWnd.cpp \
                      namespace/ComplexName.cpp \
                      namespace/Namespace.cpp \
                      namespace/NamespaceFactory.cpp \
                      render/backend/glprogram/ARBBumpProgram.cpp \
                      render/backend/glprogram/ARBDepthFillProgram.cpp \
                      render/backend/glprogram/GLSLBumpProgram.cpp \
                      render/backend/glprogram/GLSLDepthFillProgram.cpp \
                      render/backend/OpenGLShader.cpp \
                      render/backend/GLProgramFactory.cpp \
                      render/backend/OpenGLShaderPass.cpp \
                      render/LinearLightList.cpp \
                      render/OpenGLModule.cpp \
                      render/OpenGLRenderSystem.cpp \
					  render/RenderSystemFactory.cpp \
					  render/View.cpp \
                      render/debug/SpacePartitionRenderer.cpp \
                      ui/entitychooser/EntityClassChooser.cpp \
                      ui/entitychooser/EntityClassTreePopulator.cpp \
                      ui/texturebrowser/TextureBrowser.cpp \
                      ui/findshader/FindShader.cpp \
                      ui/mapinfo/MapInfoDialog.cpp \
                      ui/mapinfo/EntityInfoTab.cpp \
                      ui/mapinfo/ShaderInfoTab.cpp \
                      ui/mapinfo/ModelInfoTab.cpp \
                      ui/mediabrowser/MediaBrowser.cpp \
                      ui/particles/ParticlesChooser.cpp \
                      ui/brush/QuerySidesDialog.cpp \
                      ui/overlay/OverlayDialog.cpp \
                      ui/overlay/Overlay.cpp \
                      ui/splash/Splash.cpp \
                      ui/mru/MRUMenuItem.cpp \
                      ui/mru/MRU.cpp \
                      ui/layers/LayerControl.cpp \
                      ui/layers/LayerContextMenu.cpp \
                      ui/layers/LayerControlDialog.cpp \
                      ui/layers/LayerOrthoContextMenuItem.cpp \
                      ui/ortho/OrthoContextMenu.cpp \
                      ui/about/AboutDialog.cpp \
                      ui/einspector/AnglePropertyEditor.cpp \
                      ui/einspector/TexturePropertyEditor.cpp \
                      ui/einspector/EntityInspector.cpp \
                      ui/einspector/SkinChooser.cpp \
                      ui/einspector/ColourPropertyEditor.cpp \
                      ui/einspector/EntityPropertyEditor.cpp \
                      ui/einspector/SkinPropertyEditor.cpp \
                      ui/einspector/Vector3PropertyEditor.cpp \
                      ui/einspector/AddPropertyDialog.cpp \
                      ui/einspector/FloatPropertyEditor.cpp \
                      ui/einspector/BooleanPropertyEditor.cpp \
                      ui/einspector/LightTextureChooser.cpp \
                      ui/einspector/SoundPropertyEditor.cpp \
                      ui/einspector/PropertyEditor.cpp \
                      ui/einspector/PropertyEditorFactory.cpp \
                      ui/einspector/ClassnamePropertyEditor.cpp \
                      ui/einspector/ModelPropertyEditor.cpp \
                      ui/common/SoundChooser.cpp \
                      ui/common/TexturePreviewCombo.cpp \
                      ui/common/ShaderSelector.cpp \
                      ui/common/ShaderChooser.cpp \
                      ui/common/ShaderDefinitionView.cpp \
                      ui/common/SoundShaderPreview.cpp \
                      ui/common/RenderableAABB.cpp \
                      ui/common/CommandEntry.cpp \
                      ui/common/EntityChooser.cpp \
                      ui/common/MapPreview.cpp \
                      ui/menu/FiltersMenu.cpp \
                      ui/prefdialog/PrefPage.cpp \
                      ui/prefdialog/PrefDialog.cpp \
                      ui/transform/TransformDialog.cpp \
                      ui/modelselector/MaterialsList.cpp \
                      ui/modelselector/ModelSelector.cpp \
                      ui/surfaceinspector/SurfaceInspector.cpp \
                      ui/patch/CapDialog.cpp \
                      ui/patch/PatchThickenDialog.cpp \
                      ui/patch/PatchInspector.cpp \
                      ui/patch/PatchCreateDialog.cpp \
                      ui/patch/BulgePatchDialog.cpp \
                      ui/lightinspector/LightInspector.cpp \
                      ui/commandlist/CommandList.cpp \
                      ui/commandlist/ShortcutChooser.cpp \
                      ui/filterdialog/FilterDialog.cpp \
                      ui/filterdialog/FilterEditor.cpp \
                      ui/mainframe/MainFrame.cpp \
                      ui/mainframe/MainFrameLayoutManager.cpp \
                      ui/mainframe/FloatingLayout.cpp \
                      ui/mainframe/EmbeddedLayout.cpp \
                      ui/mainframe/SplitPaneLayout.cpp \
                      ui/mainframe/RegularLayout.cpp \
                      ui/mainframe/ScreenUpdateBlocker.cpp \
					  ui/animationpreview/AnimationPreview.cpp \
					  ui/animationpreview/MD5AnimationViewer.cpp \
                      xyview/XYWnd.cpp \
                      xyview/GlobalXYWnd.cpp \
                      textool/TexToolItem.cpp \
                      textool/item/BrushItem.cpp \
                      textool/item/FaceItem.cpp \
                      textool/item/FaceVertexItem.cpp \
                      textool/item/PatchItem.cpp \
                      textool/item/PatchVertexItem.cpp \
                      textool/TexTool.cpp \
                      layers/LayerCommandTarget.cpp \
                      layers/LayerSystem.cpp \
                      modulesystem/DynamicLibrary.cpp \
                      modulesystem/ApplicationContextImpl.cpp \
                      modulesystem/DynamicLibraryLoader.cpp \
                      modulesystem/ModuleLoader.cpp \
                      modulesystem/ModuleRegistry.cpp \
                      selection/SelectedNodeList.cpp \
					  selection/clipboard/Clipboard.cpp \
                      selection/shaderclipboard/ShaderClipboard.cpp \
                      selection/shaderclipboard/Texturable.cpp \
					  selection/shaderclipboard/ClosestTexturableFinder.cpp \
                      selection/selectionset/SelectionSetManager.cpp \
                      selection/selectionset/SelectionSetToolmenu.cpp \
                      selection/selectionset/SelectionSet.cpp \
                      selection/SelectionTest.cpp \
                      selection/ManipulateObserver.cpp \
                      selection/Manipulator.cpp \
                      selection/TransformationVisitors.cpp \
                      selection/algorithm/Transformation.cpp \
                      selection/algorithm/GroupCycle.cpp \
                      selection/algorithm/Curves.cpp \
                      selection/algorithm/Entity.cpp \
                      selection/algorithm/Shader.cpp \
					  selection/algorithm/Patch.cpp \
                      selection/algorithm/Primitives.cpp \
                      selection/algorithm/Group.cpp \
                      selection/algorithm/ModelFinder.cpp \
                      selection/algorithm/General.cpp \
                      selection/BestPoint.cpp \
                      selection/DragManipulator.cpp \
                      selection/Planes.cpp \
                      selection/RadiantWindowObserver.cpp \
                      selection/RadiantSelectionSystem.cpp \
                      selection/RotateManipulator.cpp \
                      selection/Manipulatables.cpp \
                      selection/SelectObserver.cpp \
                      selection/ScaleManipulator.cpp \
                      selection/TranslateManipulator.cpp \
                      selection/Intersection.cpp \
                      settings/GameFileLoader.cpp \
                      settings/Game.cpp \
                      settings/GameManager.cpp \
                      settings/PreferenceSystem.cpp \
                      settings/Win32Registry.cpp \
					  patch/algorithm/General.cpp \
					  patch/algorithm/Prefab.cpp \
                      patch/Patch.cpp \
					  patch/PatchCreators.cpp \
                      patch/PatchNode.cpp \
                      patch/PatchModule.cpp \
                      patch/PatchBezier.cpp \
                      patch/PatchRenderables.cpp \
                      map/RootNode.cpp \
                      map/MapPosition.cpp \
                      map/FindMapElements.cpp \
					  map/InfoFile.cpp \
                      map/MapFileManager.cpp \
                      map/MapFileChooserPreview.cpp \
					  map/algorithm/ChildPrimitives.cpp \
                      map/algorithm/Skins.cpp \
                      map/algorithm/Traverse.cpp \
					  map/algorithm/MapExporter.cpp \
                      map/algorithm/MapImporter.cpp \
					  map/algorithm/InfoFileExporter.cpp \
                      map/CounterManager.cpp \
                      map/RegionManager.cpp \
                      map/PointFile.cpp \
                      map/MapPositionManager.cpp \
                      map/MapResource.cpp \
                      map/Map.cpp \
                      map/AutoSaver.cpp \
                      map/StartupMapLoader.cpp \
                      map/MapResourceManager.cpp \
                      map/MapFormatManager.cpp \
                      clipper/ClipPoint.cpp \
                      clipper/Clipper.cpp \
                      timer.cpp \
                      log/Console.cpp \
                      log/LogStream.cpp \
                      log/LogWriter.cpp \
                      log/COutRedirector.cpp \
                      log/GtkLogRedirector.cpp \
                      log/StringLogDevice.cpp \
                      log/LogStreamBuf.cpp \
                      log/LogFile.cpp \
                      referencecache/ModelCache.cpp \
                      referencecache/NullModel.cpp \
                      referencecache/NullModelNode.cpp 

TESTS = facePlaneTest
check_PROGRAMS = facePlaneTest

facePlaneTest_SOURCES = test/facePlaneTest.cpp \
                        brush/FacePlane.cpp
facePlaneTest_LDADD = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) \
                      $(top_builddir)/libs/math/libmath.la

